--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -24,10 +24,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="SET ALARM"
-        android:layout_marginTop="20dp"
         android:clickable="true"
         android:id="@+id/alarmOn"
-        android:layout_below="@+id/updateText"
+        android:layout_below="@+id/songText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -39,7 +38,6 @@
         android:clickable="true"
         android:id="@+id/alarmOff"
         android:layout_alignTop="@+id/alarmOn"
-        android:layout_below="@id/updateText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -48,15 +46,22 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Did you set the alarm?"
-        android:layout_marginTop="20dp"
         android:id="@+id/updateText"
         android:layout_below="@+id/timePicker"
         android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/songText"
+        android:layout_centerHorizontal="true"
+        android:text="Current melodie is: "
+        android:layout_below="@id/updateText"
+        />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:id="@+id/spinner"
         android:layout_below="@+id/alarmOn"
         android:layout_centerHorizontal="true" />
